# geometry2d

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  circles_intersection.nb  create_Xcode_project.sh  geometry2d.nb
.github/workflows/: cmake.yml  codeql-analysis.yml  main.yml
cmake/: geometry2dConfig.cmake.in
geometry2d.xcodeproj/: project.pbxproj
include/: circle2.hpp  config.hpp  defs.hpp  funcs.hpp  geometry2d.hpp  line2.hpp  mathematical.hpp  ray2.hpp  vec2.hpp  version.hpp
include/geometry2d/: circle2.hpp  funcs.hpp  vec2.hpp
ref/: circles_intersection.nb
src/: test.cpp
test/: CMakeLists.txt  auto_tests.cpp  auto_tests.cpp.foot  auto_tests.cpp.head  auto_tests.hpp  geometry2dtest.cpp  get_tests.sh  test.cpp  test.cpp~main  test_geometry2d.cpp
